[STABLE]Corrected theme toggle, no longer breaks the app

--- a/src/theme/theme.dark.scss
+++ b/src/theme/theme.dark.scss
@@ -1,15 +1,5 @@
 .dark-theme {
-    ion-content {
-      background-color: #090f2f;
-      color: #fff;
-    }
-   
-    .toolbar-title {
-      color: #fff;
-    }
-   
-    .header .toolbar-background {
-      border-color: #ff0fff;
-      background-color: #090f2f;
-    }
-  }  
+  ion-card-title {
+    color: fuchsia;
+  }
+}  
