--- a/src/theme/theme.light.scss
+++ b/src/theme/theme.light.scss
@@ -1,9 +1,2 @@
 .light-theme {
-    ion-content {
-      background-color: #fff;
-    }
-   
-    .toolbar-background {
-      background-color: #fff;
-    }
   }
